target_sources(mach
   PRIVATE
      euler_integ_def_dg_cut.hpp
      euler_integ_dg_cut.hpp
      euler_dg_cut.cpp
      euler_dg_cut.hpp 
      inviscid_integ_def_dg_cut.hpp
      inviscid_integ_dg_cut.hpp
      cut_quad.hpp
      cut_quad_indicator.hpp
      mms_integ_dg_cut.hpp
      mms_integ_def_dg_cut.hpp
     )

target_include_directories(mach
   PUBLIC
      "${CMAKE_CURRENT_SOURCE_DIR}"
)
add_subdirectory(poisson)
